* #273 Allow directory as argument for db:dump (by Rick Kuipers)
* #274 Running Setup Resource Scripts Incrementally (by Alan Storm)
* #278 After magerun install I always see the Magento Installation Wizard
* #279 Updated documentation to include a few undocumented parameters to config:get (by Tegan Snyder)
* #282 Global variable or function should never be used

======
1.84.2
======

* #260 --strip="@development" not working if hardcoded table does not exists

======
1.84.1
======

* #275 There are no commands defined in the "extension" namespace.

======
1.84.0
======

* New commands cache:report and cache:view to look inside the core cache
* Support to enable/disable specific cache types
* Added Magento CE 1.8.1.0 to installer
* #152 Added local autoloader overwrites to dev:module:rewrite:list command.
* #261 Compatibility with environments that disable exec()
* #264 Grammar correction and send warning to stderr (by Melvyn Sopacua)
* #265 Features/install cmd fail invalid db config (by AydinHassan)
* #268 Added @search database table group to readme (by Tegan Snyder)
* Updated Symfony to 2.4

======
1.83.0
======

* Added --skip-config option to prohibit loading of external config files.
* #251 Improve db:info with prefix and machine-readable output (by Melvyn Sopacua)
* #255 ConfigurationLoader::loadPluginConfig() Bug? (Thanks to Cyrill Schumacher)
* #257 Configuration value decryption fails when using Enterprise Edition (by @aedmonds)
* #196 New table group for db:dump: --strip="@search" (by mystix)
* #124 Feature Request: dev:log:size should support "human readable" flags. (by Alan Storm)
* Updated dependencies (PHPUnit, Composer, Twig, JUnit-XML)

======
1.82.0
======

* Moved sys:check command logic into dist config
* Changed Magento detection (for future Magento 2 support)
* Adds --noDownload option to InstallCommand (by Manuele Menozzi)
* Fix: config:set fix --encrypt input option (by Robert Coleman)
* Updated 3rd party dependencies
